--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,9 @@ spring.jackson.serialization.write-empty-json-arrays=false
 
 # rest
 server.servlet.context-path=/fogMiddleware
-server.port=8200
+server.port=8080
+
+# ShutDown
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+endpoints.shutdown.enabled=true
